fix button alignment when text align is changed

--- a/style.css
+++ b/style.css
@@ -83,8 +83,10 @@ label {
 }
 label > * {
 	position: absolute;
-	margin: 0;
 	appearance: none;
+	margin: 0;
+	left: 0;
+	top: 0;
 	width: 100%;
 	height: 100%;
 }
